--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <iframe src="https://scratch.mit.edu/projects/1201149924/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <iframe src="https://team236.github.io/SimpleScoreboard/Simple%20scorebroad.html" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </html>
