--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <html>
-  <iframe src="https://team236.github.io/SimpleScoreboard/Simple%20scorebroad.html" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <center></center>
+  <iframe src="https://team236.github.io/SimpleScoreboard/Simple%20scorebroad.html" allowtransparency="true" width="1455" height="1206" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  </center>
 </html>
