--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <center></center>
+  <center>
   <iframe src="https://team236.github.io/SimpleScoreboard/Simple%20scorebroad.html" allowtransparency="true" width="970" height="804" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </center>
 </html>
